--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,10 @@
 #
 .DS_Store
 
+# env
+#
+.env
+
 # Xcode
 #
 build/
@@ -72,3 +76,6 @@ yarn-error.log
 !.yarn/releases
 !.yarn/sdks
 !.yarn/versions
+
+# react-native-config codegen
+ios/tmp.xcconfig
