--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "lint": "eslint src --fix",
-    "start": "react-native start",
+    "start": "npx react-native start --reset-cache",
     "test": "jest",
     "prepare": "husky install"
   },
@@ -21,6 +21,8 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.0.0",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-google-signin/google-signin": "^13.1.0",
+    "@react-native-seoul/naver-login": "^4.0.4",
     "@react-navigation/bottom-tabs": "^7.0.0",
     "@react-navigation/native": "^7.0.0",
     "@react-navigation/native-stack": "^7.0.0",
@@ -28,6 +30,7 @@
     "axios": "^1.7.7",
     "react": "18.3.1",
     "react-native": "0.76.1",
+    "react-native-config": "^1.5.3",
     "react-native-gesture-handler": "^2.20.2",
     "react-native-reanimated": "^3.16.1",
     "react-native-safe-area-context": "^4.14.0",
