--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
       android:roundIcon="@mipmap/ic_launcher_round"
       android:allowBackup="false"
       android:theme="@style/AppTheme"
-      android:supportsRtl="true">
+      android:supportsRtl="true"
+    >
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
@@ -20,7 +21,29 @@
         <intent-filter>
             <action android:name="android.intent.action.MAIN" />
             <category android:name="android.intent.category.LAUNCHER" />
+            <action android:name="android.intent.action.VIEW" />
+        </intent-filter>
+        <intent-filter>
+            <action android:name="android.intent.action.VIEW" />
+            <category android:name="android.intent.category.DEFAULT" />
+            <category android:name="android.intent.category.BROWSABLE" />
+            <data android:scheme="kakao512b3a4da55a1ae13fc547eb4c060ea7" />
         </intent-filter>
       </activity>
+
+      <!-- Kakao SDK 리디렉션 핸들러 Activity 설정 -->
+      <activity
+        android:name="com.kakao.sdk.auth.AuthCodeHandlerActivity"
+        android:exported="true">
+        <intent-filter>
+          <action android:name="android.intent.action.VIEW" />
+          <category android:name="android.intent.category.DEFAULT" />
+          <category android:name="android.intent.category.BROWSABLE" />
+          
+          <!-- Kakao 리디렉션 URI 설정 -->
+          <data android:scheme="kakao512b3a4da55a1ae13fc547eb4c060ea7" android:host="oauth" />
+        </intent-filter>
+      </activity>
+
     </application>
 </manifest>
