--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@tanstack/react-query": "^5.59.20",
     "axios": "^1.7.7",
     "react": "18.3.1",
+    "react-hook-form": "^7.53.2",
     "react-native": "0.76.1",
     "react-native-config": "^1.5.3",
     "react-native-gesture-handler": "^2.20.2",
