--- a/ios/dinos/Info.plist
+++ b/ios/dinos/Info.plist
@@ -59,8 +59,23 @@
 		<key>NSAllowsLocalNetworking</key>
 		<true/>
 	</dict>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>현재 위치 확인을 위한 위치 접근 권한 동의가 필요합니다. 설정에서 동의 여부를 변경할 수 있으며, 위치는 서버에 전송되지 않습니다.</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>현재 위치 확인을 위한 위치 접근 권한 동의가 필요합니다. 설정에서 동의 여부를 변경할 수 있으며, 위치는 서버에 전송되지 않습니다.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string>현재 위치 확인을 위한 위치 접근 권한 동의가 필요합니다. 설정에서 동의 여부를 변경할 수 있으며, 위치는 서버에 전송되지 않습니다.</string>
+	<key>NSMotionUsageDescription</key>
+	<string>현재 위치 확인을 위한 위치 접근 권한 동의가 필요합니다. 설정에서 동의 여부를 변경할 수 있으며, 위치는 서버에 전송되지 않습니다.</string>
+	
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>맛집 등록 시 사진 선택을 위해 라이브러리 접근 권한이 필요합니다.</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>맛집 등록 시 사진 선택을 위해 라이브러리 접근 권한이 필요합니다.</string>
+	<key>NSAppleMusicUsageDescription</key>
+	<string>맛집 등록 시 사진 선택을 위해 라이브러리 접근 권한이 필요합니다.</string>
+	<key>MAPS_IOS_API_KEY</key>
+	<string>$(MAPS_IOS_API_KEY)</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
