--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-native-reanimated": "^3.16.1",
     "react-native-safe-area-context": "^4.14.0",
     "react-native-screens": "^4.0.0",
+    "react-native-splash-screen": "^3.3.0",
     "zustand": "^5.0.1"
   },
   "devDependencies": {
