--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "src/**/*.{js,jsx,ts,tsx}": "npm run lint"
   },
   "dependencies": {
+    "@invertase/react-native-apple-authentication": "^2.4.0",
     "@react-native-async-storage/async-storage": "^2.0.0",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-google-signin/google-signin": "^13.1.0",
