--- a/ios/dinos/Info.plist
+++ b/ios/dinos/Info.plist
@@ -36,7 +36,7 @@
 			<key>CFBundleTypeRole</key>
 			<string>Editor</string>
 			<key>CFBundleURLName</key>
-			<string></string>
+			<string/>
 			<key>CFBundleURLSchemes</key>
 			<array>
 				<string>com.googleusercontent.apps.251020813817-72rqd7avdhlrpcb7vv5ft3kbl7g102so</string>
@@ -67,7 +67,6 @@
 	<string>현재 위치 확인을 위한 위치 접근 권한 동의가 필요합니다. 설정에서 동의 여부를 변경할 수 있으며, 위치는 서버에 전송되지 않습니다.</string>
 	<key>NSMotionUsageDescription</key>
 	<string>현재 위치 확인을 위한 위치 접근 권한 동의가 필요합니다. 설정에서 동의 여부를 변경할 수 있으며, 위치는 서버에 전송되지 않습니다.</string>
-	
 	<key>NSPhotoLibraryAddUsageDescription</key>
 	<string>맛집 등록 시 사진 선택을 위해 라이브러리 접근 권한이 필요합니다.</string>
 	<key>NSPhotoLibraryUsageDescription</key>
@@ -90,5 +89,14 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Pretendard-Bold.otf</string>
+		<string>Pretendard-ExtraBold.otf</string>
+		<string>Pretendard-Light.otf</string>
+		<string>Pretendard-Medium.otf</string>
+		<string>Pretendard-Regular.otf</string>
+		<string>Pretendard-SemiBold.otf</string>
+	</array>
 </dict>
 </plist>
