--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -112,6 +112,11 @@ dependencies {
     implementation("com.facebook.react:react-android")
     implementation project(':react-native-config')
     implementation 'com.google.android.gms:play-services-location:21.0.1'
+    // 컴포넌트 내 gif 사용
+    implementation 'com.facebook.fresco:animated-base-support:1.3.0' // api level 14 지원
+    implementation 'com.facebook.fresco:animated-gif:3.5.0'
+    // splash screen
+    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.29'
     
 
     if (hermesEnabled.toBoolean()) {
