--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -35,7 +35,7 @@ reactNativeArchitectures=armeabi-v7a,arm64-v8a,x86,x86_64
 # your application. You should enable this flag either if you want
 # to write custom TurboModules/Fabric components OR use libraries that
 # are providing them.
-newArchEnabled=true
+# newArchEnabled=true // react-native-maps 현재 버전에서 fabric 지원하지 않음, 비활성화
 
 # Use this property to enable or disable the Hermes JS engine.
 # If set to false, you will be using JSC instead.
