--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -136,4 +136,10 @@ dependencies {
     }
 }
 
+project.ext.envConfigFiles = [
+    // debug: ".env.development",
+    release: ".env.production",
+    anothercustombuild: ".env",
+]
+
 apply from: project(':react-native-config').projectDir.getPath() + "/dotenv.gradle"
